--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="">
+                <h2>Sass</h2>
+            </a>
+        </nav>
+    </header>
 
 </body>
 
