--- a/index.html
+++ b/index.html
@@ -4,17 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Sass Landing</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="">
-                <h2>Sass</h2>
-            </a>
-        </nav>
-    </header>
+
+    <main>
+        <header class="container">
+            <nav>
+                <a href="">
+                    <h2 class="logo">Sass</h2>
+                </a>
+
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Learn</a></li>
+                    <li><a href="#">Teach</a></li>
+                    <li><a href="#">Sign In</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="hero container">
+            <div class="hero-contents">
+                <h1>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quam, adipisci distinctio assumenda
+                    suscipit deleniti iste illo voluptatem possimus a dolorem commodi alias excepturi! Quos quisquam
+                    amet ratione provident delectus?</p>
+                <div>
+                    <button>
+                        Sign In
+                    </button>
+                    <button>
+                        Sign Up
+                    </button>
+                </div>
+            </div>
+            <img class="hero-img" src="./images/Web development isometric concept infographics.svg" alt="">
+        </div>
+    </main>
 
 </body>
 
