--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         <header class="container">
             <nav>
                 <a href="">
-                    <h2 class="logo">Sass</h2>
+                    <h2 class="logo">DevWeb Pro</h2>
                 </a>
 
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Learn</a></li>
-                    <li><a href="#">Teach</a></li>
-                    <li><a href="#">Sign In</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -29,17 +30,24 @@
         <div class="hero container">
             <div class="hero-contents">
                 <h1>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Elevate Your Web Presence
                 </h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quam, adipisci distinctio assumenda
-                    suscipit deleniti iste illo voluptatem possimus a dolorem commodi alias excepturi! Quos quisquam
-                    amet ratione provident delectus?</p>
-                <div>
-                    <button>
-                        Sign In
+                <p>We craft digital experiences that resonate with your audience. From stunning websites to powerful web
+                    applications, our expert team delivers excellence.</p>
+                <div style="display: flex;">
+                    <button class="button-secondary">
+                        Learn More
                     </button>
-                    <button>
-                        Sign Up
+                    <button class="button-primary" style="display: flex; gap: 6px; align-items: center;">
+                        Get Started
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="feather feather-arrow-up-right">
+                            <line x1="7" y1="17" x2="17" y2="7"></line>
+                            <polyline points="7 7 17 7 17 17"></polyline>
+                        </svg>
+
                     </button>
                 </div>
             </div>
