--- a/index.html
+++ b/index.html
@@ -11,48 +11,138 @@
 <body>
 
     <main>
-        <header class="container">
-            <nav>
-                <a href="">
-                    <h2 class="logo">DevWeb Pro</h2>
-                </a>
+        <section class="header-hero-container">
+            <header class="">
+                <nav>
+                    <a href="">
+                        <h2 class="logo">DevWeb Pro</h2>
+                    </a>
 
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-        <div class="hero container">
-            <div class="hero-contents">
-                <h1>
-                    Elevate Your Web Presence
-                </h1>
-                <p>We craft digital experiences that resonate with your audience. From stunning websites to powerful web
-                    applications, our expert team delivers excellence.</p>
-                <div style="display: flex;">
-                    <button class="button-secondary">
-                        Learn More
-                    </button>
-                    <button class="button-primary" style="display: flex; gap: 6px; align-items: center;">
-                        Get Started
+            <section class="hero">
+                <div class="hero-contents">
+                    <h1>
+                        Elevate Your Web Presence
+                    </h1>
+                    <p>We craft digital experiences that resonate with your audience. From stunning websites to powerful
+                        web
+                        applications, our expert team delivers excellence.</p>
+                    <div style="display: flex;">
+                        <button class="button-secondary">
+                            Learn More
+                        </button>
+                        <button class="button-primary" style="display: flex; gap: 6px; align-items: center;">
+                            Get Started
 
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="feather feather-arrow-up-right">
-                            <line x1="7" y1="17" x2="17" y2="7"></line>
-                            <polyline points="7 7 17 7 17 17"></polyline>
-                        </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-arrow-up-right">
+                                <line x1="7" y1="17" x2="17" y2="7"></line>
+                                <polyline points="7 7 17 7 17 17"></polyline>
+                            </svg>
 
-                    </button>
+                        </button>
+                    </div>
+                </div>
+                <img class="hero-img" src="./images/Web development isometric concept infographics.svg" alt="">
+            </section>
+        </section>
+
+
+
+
+        <section class="container our-services">
+            <h1 class="head">A Good Website Can</h1>
+            <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur<br>
+                aperiam
+                expedita quo
+                doloribus!</p>
+            <div class="cards">
+                <div class="card">
+                    <img src="./images/s1.png" alt="">
+                    <h2>Grow Your Traffic</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque doloribus at sint a molestiae
+                        aliquam.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/s2.png" alt="">
+                    <h2>Get Quality Leads</h2>
+                    <p>In quas velit laborum, magnam iusto alias unde earum, similique nesciunt, ad architecto cumque
+                        ipsum!</p>
+                </div>
+                <div class="card">
+                    <img src="./images/s3.png" alt="">
+                    <h2>Drive More Sales</h2>
+                    <p>Repudiandae vero ut dignissimos? Natus expedita nemo quod illo beatae incidunt distinctio?
+                        Repudiandae, officia itaque!</p>
                 </div>
             </div>
-            <img class="hero-img" src="./images/Web development isometric concept infographics.svg" alt="">
-        </div>
+        </section>
+
+
+        <section class="container features">
+            <div class="card">
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24"
+                        style="fill: currentColor;transform: ;msFilter:;">
+                        <path
+                            d="M6 5v14h3v-6h6v6h3V5h-3v6H9V5zM3 15a1 1 0 0 0 1 1h1V8H4a1 1 0 0 0-1 1v2H2v2h1v2zm18-6a1 1 0 0 0-1-1h-1v8h1a1 1 0 0 0 1-1v-2h1v-2h-1V9z">
+                        </path>
+                    </svg>
+                </div>
+                <div>
+                    <h3>Optimized Code</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quam.</p>
+                </div>
+            </div>
+            <div class="vertical-line"></div>
+            <div class="card">
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24"
+                        style="fill: currentColor;transform: ;msFilter:;">
+                        <path
+                            d="M12 2C6.485 2 2 6.485 2 12s4.485 10 10 10c5.514 0 10-4.485 10-10S17.514 2 12 2zm1 14v-4l-6 4V8l6 4V8l6 4-6 4z">
+                        </path>
+                    </svg>
+                </div>
+                <div>
+                    <h3>Fast Delivery</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quam.</p>
+                </div>
+            </div>
+            <div class="vertical-line"></div>
+            <div class="card">
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24"
+                        style="fill: currentColor;transform: ;msFilter:;">
+                        <path
+                            d="M19.965 8.521C19.988 8.347 20 8.173 20 8c0-2.379-2.143-4.288-4.521-3.965C14.786 2.802 13.466 2 12 2s-2.786.802-3.479 2.035C6.138 3.712 4 5.621 4 8c0 .173.012.347.035.521C2.802 9.215 2 10.535 2 12s.802 2.785 2.035 3.479A3.976 3.976 0 0 0 4 16c0 2.379 2.138 4.283 4.521 3.965C9.214 21.198 10.534 22 12 22s2.786-.802 3.479-2.035C17.857 20.283 20 18.379 20 16c0-.173-.012-.347-.035-.521C21.198 14.785 22 13.465 22 12s-.802-2.785-2.035-3.479zm-9.01 7.895-3.667-3.714 1.424-1.404 2.257 2.286 4.327-4.294 1.408 1.42-5.749 5.706z">
+                        </path>
+                    </svg>
+                </div>
+                <div>
+                    <h3>Quality Service</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quam.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="container featured-services">
+            <h1 class="head">Featured Services</h1>
+            <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur<br>
+                aperiam
+                expedita quo
+                doloribus!</p>
+        </section>
     </main>
 
 </body>
