--- a/index.html
+++ b/index.html
@@ -136,15 +136,136 @@
             </div>
         </section>
 
-        <section class="container featured-services">
+        <!-- <section class="container featured-services">
             <h1 class="head">Featured Services</h1>
             <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur<br>
                 aperiam
                 expedita quo
                 doloribus!</p>
+        </section> -->
+        <section class="container featured-services">
+            <div class="cards">
+                <div class="card">
+                    <img src="./images/s1.png" alt="">
+                    <h3>Lorem, ipsum.</h3>
+                </div>
+                <div class="card">
+                    <img src="./images/s1.png" alt="">
+                    <h3>Lorem, ipsum.</h3>
+                </div>
+                <div class="card">
+                    <img src="./images/s1.png" alt="">
+                    <h3>Lorem, ipsum.</h3>
+                </div>
+                <div class="card">
+                    <img src="./images/s1.png" alt="">
+                    <h3>Lorem, ipsum.</h3>
+                </div>
+            </div>
+            <div>
+                <div class="ft-headline">
+                    <hr>
+                    <h2>Services</h2>
+                </div>
+                <h1 class="head">Featured Services</h1>
+                <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur<br>
+                    aperiam
+                    expedita quo
+                    doloribus!</p>
+            </div>
+        </section>
+
+        <section class="container testimonial">
+            <h1 class="head">Testimonial Section</h1>
+            <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur<br>
+                aperiam
+                expedita quo
+                doloribus!</p>
+
+            <div class="cards">
+                <div class="card">
+                    <img src="" alt="">
+                    <h2>Lorem, ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae similique tenetur iste?</p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h2>Lorem, ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae similique tenetur iste?</p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <h2>Lorem, ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae similique tenetur iste?</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="container contact">
+            <div>
+                <h1 class="head">Featured Services</h1>
+                <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur
+                    aperiam
+                    expedita quo
+                    doloribus!</p>
+
+                <form action="">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <input type="text" name="" id="" placeholder="Subject">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Massage"></textarea>
+                </form>
+            </div>
+            <div>
+                <h1 class="head">Featured Services</h1>
+                <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur
+                    aperiam
+                    expedita quo
+                    doloribus!</p>
+
+                <div class="accordion">
+                    <div class="accordion-item">
+                        <div class="accordion-header">
+                            <h3>Lorem ipsum dolor sit.</h3>
+                            <button>+</button>
+                        </div>
+                        <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                            doloremque nemo neque ad, explicabo nisi?</div>
+
+                    </div>
+                    <div class="accordion-item">
+                        <div class="accordion-header">
+                            <h3>Lorem ipsum dolor sit.</h3>
+                            <button>+</button>
+                        </div>
+                        <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                            doloremque nemo neque ad, explicabo nisi?</div>
+
+                    </div>
+                    <div class="accordion-item">
+                        <div class="accordion-header">
+                            <h3>Lorem ipsum dolor sit.</h3>
+                            <button>+</button>
+                        </div>
+                        <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                            doloremque nemo neque ad, explicabo nisi?</div>
+
+                    </div>
+                    <div class="accordion-item">
+                        <div class="accordion-header">
+                            <h3>Lorem ipsum dolor sit.</h3>
+                            <button>+</button>
+                        </div>
+                        <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                            doloremque nemo neque ad, explicabo nisi?</div>
+
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
