rest and services

--- a/index.html
+++ b/index.html
@@ -162,16 +162,18 @@
                     <h3>Lorem, ipsum.</h3>
                 </div>
             </div>
-            <div>
+            <div class="contents">
                 <div class="ft-headline">
                     <hr>
                     <h2>Services</h2>
                 </div>
-                <h1 class="head">Featured Services</h1>
-                <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur<br>
-                    aperiam
-                    expedita quo
-                    doloribus!</p>
+                <h1 class="head">We can help you solve
+                    your problem through
+                    our service.</h1>
+                <p class="subhead">We are a brand strategy & digital design agency building
+                    brands that matter in culture with more than ten years of
+                    experience.</p>
+                <button class="button-primary">Explore Services</button>
             </div>
         </section>
 
@@ -201,63 +203,66 @@
             </div>
         </section>
 
-        <section class="container contact">
-            <div>
-                <h1 class="head">Featured Services</h1>
-                <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur
-                    aperiam
-                    expedita quo
-                    doloribus!</p>
 
-                <form action="">
-                    <input type="email" name="" id="" placeholder="Email">
-                    <input type="text" name="" id="" placeholder="Subject">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Massage"></textarea>
-                </form>
-            </div>
-            <div>
-                <h1 class="head">Featured Services</h1>
-                <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur
-                    aperiam
-                    expedita quo
-                    doloribus!</p>
+        <section class="contact-holder">
+            <div class="container contact">
+                <div>
+                    <h1 class="head">Featured Services</h1>
+                    <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur
+                        aperiam
+                        expedita quo
+                        doloribus!</p>
 
-                <div class="accordion">
-                    <div class="accordion-item">
-                        <div class="accordion-header">
-                            <h3>Lorem ipsum dolor sit.</h3>
-                            <button>+</button>
+                    <form action="">
+                        <input type="email" name="" id="" placeholder="Email">
+                        <input type="text" name="" id="" placeholder="Subject">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Your Massage"></textarea>
+                    </form>
+                </div>
+                <div>
+                    <h1 class="head">Featured Services</h1>
+                    <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur
+                        aperiam
+                        expedita quo
+                        doloribus!</p>
+
+                    <div class="accordion">
+                        <div class="accordion-item">
+                            <div class="accordion-header">
+                                <h3>Lorem ipsum dolor sit.</h3>
+                                <button>+</button>
+                            </div>
+                            <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                                doloremque nemo neque ad, explicabo nisi?</div>
+
                         </div>
-                        <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                            doloremque nemo neque ad, explicabo nisi?</div>
+                        <div class="accordion-item">
+                            <div class="accordion-header">
+                                <h3>Lorem ipsum dolor sit.</h3>
+                                <button>+</button>
+                            </div>
+                            <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                                doloremque nemo neque ad, explicabo nisi?</div>
 
-                    </div>
-                    <div class="accordion-item">
-                        <div class="accordion-header">
-                            <h3>Lorem ipsum dolor sit.</h3>
-                            <button>+</button>
                         </div>
-                        <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                            doloremque nemo neque ad, explicabo nisi?</div>
+                        <div class="accordion-item">
+                            <div class="accordion-header">
+                                <h3>Lorem ipsum dolor sit.</h3>
+                                <button>+</button>
+                            </div>
+                            <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                                doloremque nemo neque ad, explicabo nisi?</div>
 
-                    </div>
-                    <div class="accordion-item">
-                        <div class="accordion-header">
-                            <h3>Lorem ipsum dolor sit.</h3>
-                            <button>+</button>
                         </div>
-                        <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                            doloremque nemo neque ad, explicabo nisi?</div>
+                        <div class="accordion-item">
+                            <div class="accordion-header">
+                                <h3>Lorem ipsum dolor sit.</h3>
+                                <button>+</button>
+                            </div>
+                            <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                                doloremque nemo neque ad, explicabo nisi?</div>
 
-                    </div>
-                    <div class="accordion-item">
-                        <div class="accordion-header">
-                            <h3>Lorem ipsum dolor sit.</h3>
-                            <button>+</button>
                         </div>
-                        <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                            doloremque nemo neque ad, explicabo nisi?</div>
-
                     </div>
                 </div>
             </div>
