--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@
             <div class="cards">
                 <div class="card">
                     <img src="./images/s1.png" alt="">
-                    <h3>Lorem, ipsum.</h3>
+                    <h2>Research</h2>
                 </div>
                 <div class="card">
                     <img src="./images/s1.png" alt="">
-                    <h3>Lorem, ipsum.</h3>
+                    <h2>UI/UX Design</h2>
                 </div>
                 <div class="card">
                     <img src="./images/s1.png" alt="">
-                    <h3>Lorem, ipsum.</h3>
+                    <h2>Front-end Development</h2>
                 </div>
                 <div class="card">
                     <img src="./images/s1.png" alt="">
-                    <h3>Lorem, ipsum.</h3>
+                    <h2>Full Stack Development</h2>
                 </div>
             </div>
             <div class="contents">
@@ -174,6 +174,31 @@
                     brands that matter in culture with more than ten years of
                     experience.</p>
                 <button class="button-primary">Explore Services</button>
+            </div>
+        </section>
+
+        <section class=" achievements">
+            <div class="container">
+                <div class="card">
+                    <h3>200 +</h3>
+                    <p>Job Complete</p>
+                </div>
+                <div class="vertical-line"></div>
+                <div class="card">
+                    <h3>2K+</h3>
+                    <p>Happy Customers</p>
+                </div>
+                <div class="vertical-line"></div>
+                <div class="card">
+                    <h3>5+</h3>
+                    <p>Years Experience</p>
+                </div>
+                <div class="vertical-line"></div>
+                <div class="card">
+                    <h3>20+</h3>
+                    <p>Won Awards</p>
+                </div>
+
             </div>
         </section>
 
@@ -207,7 +232,7 @@
         <section class="contact-holder">
             <div class="container contact">
                 <div>
-                    <h1 class="head">Featured Services</h1>
+                    <h1 class="head">Let's Get In Touch</h1>
                     <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur
                         aperiam
                         expedita quo
@@ -220,7 +245,7 @@
                     </form>
                 </div>
                 <div>
-                    <h1 class="head">Featured Services</h1>
+                    <h1 class="head">Do you have questions?</h1>
                     <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur
                         aperiam
                         expedita quo
@@ -229,38 +254,59 @@
                     <div class="accordion">
                         <div class="accordion-item">
                             <div class="accordion-header">
-                                <h3>Lorem ipsum dolor sit.</h3>
+                                <h3>What is web development?</h3>
                                 <button>+</button>
                             </div>
-                            <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                                doloremque nemo neque ad, explicabo nisi?</div>
+                            <div class="accordion-content">
+                                <p>
+                                    Web development is the process of building and maintaining websites and web
+                                    applications. It involves a combination of coding, design, and server management to
+                                    create functional and visually appealing online platforms.
+                                </p>
+                            </div>
 
                         </div>
                         <div class="accordion-item">
                             <div class="accordion-header">
-                                <h3>Lorem ipsum dolor sit.</h3>
+                                <h3>What programming languages are commonly used in web development?</h3>
                                 <button>+</button>
                             </div>
-                            <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                                doloremque nemo neque ad, explicabo nisi?</div>
+                            <div class="accordion-content">
+                                <p>
+                                    Some of the commonly used programming languages in web development include HTML,
+                                    CSS, JavaScript, Python, Ruby, PHP, and Java. The choice of language depends on the
+                                    specific requirements of the project.
+                                </p>
+                            </div>
 
                         </div>
                         <div class="accordion-item">
                             <div class="accordion-header">
-                                <h3>Lorem ipsum dolor sit.</h3>
+                                <h3>How long does it take to develop a website?</h3>
                                 <button>+</button>
                             </div>
-                            <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                                doloremque nemo neque ad, explicabo nisi?</div>
+                            <div class="accordion-content">
+                                <p>
+                                    The time required to develop a website varies widely based on the complexity of the
+                                    project. A simple static website might take a few days, while a complex e-commerce
+                                    platform or web application could take several months. It's essential to discuss
+                                    timelines with your development team to get a more accurate estimate.
+                                </p>
+                            </div>
 
                         </div>
                         <div class="accordion-item">
                             <div class="accordion-header">
-                                <h3>Lorem ipsum dolor sit.</h3>
+                                <h3>Do you provide website maintenance services?</h3>
                                 <button>+</button>
                             </div>
-                            <div class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                                doloremque nemo neque ad, explicabo nisi?</div>
+                            <div class="accordion-content">
+                                <p>
+                                    Yes, we offer website maintenance services to ensure your website stays up-to-date,
+                                    secure, and performs optimally. Our maintenance services can include content
+                                    updates, security patches, bug fixes, and feature enhancements based on your needs.
+                                </p>
+                            </div>
 
                         </div>
                     </div>
