--- a/index2.html
+++ b/index2.html
@@ -67,13 +67,13 @@
             <div class="cards">
                 <div class="card">
                     <img src="./images/s1.png" alt="">
-                    <h2>Increase Your Website Traffic</h2>
+                    <h2>Increase Website Traffic</h2>
                     <p>We implement strategies that attract more visitors to your site, ensuring increased online
                         visibility.</p>
                 </div>
                 <div class="card">
                     <img src="./images/s2.png" alt="">
-                    <h2>Generate High-Quality Leads</h2>
+                    <h2>Generate Quality Leads</h2>
                     <p>We optimize your online presence to capture valuable leads, turning prospects into loyal
                         customers.</p>
                 </div>
