--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>DevWeb Pro - Elevate Your Web Presence</title>
+    <title>Sass Landing</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <section class="header-hero-container">
             <header class="">
                 <nav>
-                    <a href="#">
+                    <a href="">
                         <h2 class="logo">DevWeb Pro</h2>
                     </a>
 
@@ -33,7 +33,7 @@
                     <h1>
                         Elevate Your Web Presence
                     </h1>
-                    <p>We create digital experiences that connect with your audience. From stunning websites to powerful
+                    <p>We craft digital experiences that resonate with your audience. From stunning websites to powerful
                         web
                         applications, our expert team delivers excellence.</p>
                     <div style="display: flex;">
@@ -61,27 +61,29 @@
 
 
         <section class="container our-services">
-            <h1 class="head">How a Good Website Can Benefit You</h1>
-            <p class="subhead">Your online presence matters. We help you stand out and succeed.<br>
-                Connect with your audience effectively!</p>
+            <h1 class="head">A Good Website Can</h1>
+            <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur<br>
+                aperiam
+                expedita quo
+                doloribus!</p>
             <div class="cards">
                 <div class="card">
                     <img src="./images/s1.png" alt="">
-                    <h2>Increase Website Traffic</h2>
-                    <p>We implement strategies that attract more visitors to your site, ensuring increased online
-                        visibility.</p>
+                    <h2>Grow Your Traffic</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque doloribus at sint a molestiae
+                        aliquam.</p>
                 </div>
                 <div class="card">
                     <img src="./images/s2.png" alt="">
-                    <h2>Generate Quality Leads</h2>
-                    <p>We optimize your online presence to capture valuable leads, turning prospects into loyal
-                        customers.</p>
+                    <h2>Get Quality Leads</h2>
+                    <p>In quas velit laborum, magnam iusto alias unde earum, similique nesciunt, ad architecto cumque
+                        ipsum!</p>
                 </div>
                 <div class="card">
                     <img src="./images/s3.png" alt="">
-                    <h2>Boost Your Sales</h2>
-                    <p>We deliver results. Our solutions drive sales and revenue growth, making your business thrive.
-                    </p>
+                    <h2>Drive More Sales</h2>
+                    <p>Repudiandae vero ut dignissimos? Natus expedita nemo quod illo beatae incidunt distinctio?
+                        Repudiandae, officia itaque!</p>
                 </div>
             </div>
         </section>
@@ -99,8 +101,7 @@
                 </div>
                 <div>
                     <h3>Optimized Code</h3>
-                    <p>We ensure clean and efficient code that enhances your website's performance and user experience.
-                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quam.</p>
                 </div>
             </div>
             <div class="vertical-line"></div>
@@ -115,8 +116,7 @@
                 </div>
                 <div>
                     <h3>Fast Delivery</h3>
-                    <p>We value your time. Our swift development process ensures your project is delivered promptly
-                        without compromising quality.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quam.</p>
                 </div>
             </div>
             <div class="vertical-line"></div>
@@ -131,12 +131,18 @@
                 </div>
                 <div>
                     <h3>Quality Service</h3>
-                    <p>We are committed to delivering top-notch services that meet your needs and exceed your
-                        expectations.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quam.</p>
                 </div>
             </div>
         </section>
 
+        <!-- <section class="container featured-services">
+            <h1 class="head">Featured Services</h1>
+            <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur<br>
+                aperiam
+                expedita quo
+                doloribus!</p>
+        </section> -->
         <section class="container featured-services">
             <div class="cards">
                 <div class="card">
@@ -159,14 +165,14 @@
             <div class="contents">
                 <div class="ft-headline">
                     <hr>
-                    <h2>Our Services</h2>
+                    <h2>Services</h2>
                 </div>
                 <h1 class="head">We can help you solve
-                    your problems through
-                    our services.</h1>
-                <p class="subhead">We are a brand strategy & digital design agency with over a decade of experience,
-                    building
-                    brands that matter in culture.</p>
+                    your problem through
+                    our service.</h1>
+                <p class="subhead">We are a brand strategy & digital design agency building
+                    brands that matter in culture with more than ten years of
+                    experience.</p>
                 <button class="button-primary">Explore Services</button>
             </div>
         </section>
@@ -175,22 +181,22 @@
             <div class="container">
                 <div class="card">
                     <h3>200 +</h3>
-                    <p>Projects Completed</p>
+                    <p>Job Complete</p>
                 </div>
                 <div class="vertical-line"></div>
                 <div class="card">
                     <h3>2K+</h3>
-                    <p>Satisfied Customers</p>
+                    <p>Happy Customers</p>
                 </div>
                 <div class="vertical-line"></div>
                 <div class="card">
                     <h3>5+</h3>
-                    <p>Years of Experience</p>
+                    <p>Years Experience</p>
                 </div>
                 <div class="vertical-line"></div>
                 <div class="card">
                     <h3>20+</h3>
-                    <p>Awards Won</p>
+                    <p>Won Awards</p>
                 </div>
 
             </div>
@@ -198,47 +204,52 @@
 
         <section class="container testimonial">
             <h1 class="head">Testimonial Section</h1>
-            <p class="subhead">Our clients speak about their experiences with us.</p>
+            <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur<br>
+                aperiam
+                expedita quo
+                doloribus!</p>
 
             <div class="cards">
                 <div class="card">
                     <img src="" alt="">
-                    <h2>John Doe</h2>
-                    <p>Working with DevWeb Pro has been a game-changer for our business. They delivered exceptional
-                        results and exceeded our expectations.</p>
+                    <h2>Lorem, ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae similique tenetur iste?</p>
                 </div>
                 <div class="card">
                     <img src="" alt="">
-                    <h2>Jane Smith</h2>
-                    <p>The team at DevWeb Pro is highly skilled and professional. They helped us achieve our online
-                        goals and provided excellent support throughout the project.</p>
+                    <h2>Lorem, ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae similique tenetur iste?</p>
                 </div>
                 <div class="card">
                     <img src="" alt="">
-                    <h2>David Johnson</h2>
-                    <p>DevWeb Pro's maintenance services have been a lifesaver for our business. Their team is
-                        incredibly responsive and attentive to our website's needs.</p>
+                    <h2>Lorem, ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae similique tenetur iste?</p>
                 </div>
             </div>
         </section>
+
 
         <section class="contact-holder">
             <div class="container contact">
                 <div>
                     <h1 class="head">Let's Get In Touch</h1>
-                    <p class="subhead">Have a project in mind or need assistance? Drop us a message, and we'll get back
-                        to you promptly.</p>
+                    <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur
+                        aperiam
+                        expedita quo
+                        doloribus!</p>
 
                     <form action="">
                         <input type="email" name="" id="" placeholder="Email">
                         <input type="text" name="" id="" placeholder="Subject">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Your Massage"></textarea>
                     </form>
                 </div>
                 <div>
-                    <h1 class="head">Got Questions?</h1>
-                    <p class="subhead">We're here to help. Check out some common questions below. Don't hesitate to ask
-                        anything not mentioned here.</p>
+                    <h1 class="head">Do you have questions?</h1>
+                    <p class="subhead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, vero? Tenetur
+                        aperiam
+                        expedita quo
+                        doloribus!</p>
 
                     <div class="accordion">
                         <div class="accordion-item">
@@ -303,51 +314,6 @@
             </div>
         </section>
     </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-logo">
-                <h2>DevWeb Pro</h2>
-            </div>
-            <hr>
-            <div class="footer-links">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="social-media">
-                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
-                        style="fill: currentColor;transform: ;msFilter:;">
-                        <path
-                            d="M12.001 2.002c-5.522 0-9.999 4.477-9.999 9.999 0 4.99 3.656 9.126 8.437 9.879v-6.988h-2.54v-2.891h2.54V9.798c0-2.508 1.493-3.891 3.776-3.891 1.094 0 2.24.195 2.24.195v2.459h-1.264c-1.24 0-1.628.772-1.628 1.563v1.875h2.771l-.443 2.891h-2.328v6.988C18.344 21.129 22 16.992 22 12.001c0-5.522-4.477-9.999-9.999-9.999z">
-                        </path>
-                    </svg></a>
-                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
-                        style="fill: currentColor;transform: ;msFilter:;">
-                        <path
-                            d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z">
-                        </path>
-                    </svg></a>
-                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
-                        style="fill: currentColor;transform: ;msFilter:;">
-                        <path
-                            d="M20.947 8.305a6.53 6.53 0 0 0-.419-2.216 4.61 4.61 0 0 0-2.633-2.633 6.606 6.606 0 0 0-2.186-.42c-.962-.043-1.267-.055-3.709-.055s-2.755 0-3.71.055a6.606 6.606 0 0 0-2.185.42 4.607 4.607 0 0 0-2.633 2.633 6.554 6.554 0 0 0-.419 2.185c-.043.963-.056 1.268-.056 3.71s0 2.754.056 3.71c.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632 6.584 6.584 0 0 0 2.185.45c.963.043 1.268.056 3.71.056s2.755 0 3.71-.056a6.59 6.59 0 0 0 2.186-.419 4.615 4.615 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.187.043-.962.056-1.267.056-3.71-.002-2.442-.002-2.752-.058-3.709zm-8.953 8.297c-2.554 0-4.623-2.069-4.623-4.623s2.069-4.623 4.623-4.623a4.623 4.623 0 0 1 0 9.246zm4.807-8.339a1.077 1.077 0 0 1-1.078-1.078 1.077 1.077 0 1 1 2.155 0c0 .596-.482 1.078-1.077 1.078z">
-                        </path>
-                        <circle cx="11.994" cy="11.979" r="3.003"></circle>
-                    </svg></a>
-            </div>
-        </div>
-        <div class="footer-disclaimer">
-            <p>&copy; 2023 DevWeb Pro. All Rights Reserved. | Designed by <a href="http://smobin.com/"
-                    target="_blank">Shehjad
-                    Mobin</a></p>
-        </div>
-    </footer>
-
 
 
     <script src="./script.js"></script>
