--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
                     <p>We create digital experiences that connect with your audience. From stunning websites to powerful
                         web
                         applications, our expert team delivers excellence.</p>
-                    <div style="display: flex;">
+                    <div class="btn-container">
                         <button class="button-secondary">
                             Learn More
                         </button>
-                        <button class="button-primary" style="display: flex; gap: 6px; align-items: center;">
+                        <button class="button-primary"
+                            style="display: flex; gap: 6px; align-items: center; justify-content: center;">
                             Get Started
 
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
