mobile button & responsive

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
                         <h2 class="logo">DevWeb Pro</h2>
                     </a>
 
+                    <button id="menu-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            style="fill: currentColor;transform: ;msFilter:;">
+                            <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path>
+                        </svg>
+                    </button>
+
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Services</a></li>
