--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     </footer>
 
 
-
+    <button id="dark-btn" style="position: fixed; top: 20px; right: 20px;">dark</button>
     <script src="./script.js"></script>
 </body>
 
